<resources>
    <string name="app_name">Smart Learning</string>

    <!-- Login Activity -->
    <string name="login_email_edit_text_hint">E-mail</string>
    <string name="login_password_edit_text_hint">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_sign_up_button">No Account Yet? Sign Up Now</string>
    <string name="under_appname_intro_loginscreen">Easy and Smart Learning, Welcome!</string>

    <string name="login_choose_another_user_name_toast">Choose a different user name</string>

    <!-- Sign Up Activity -->
    <string name="sign_up_user_name_edit_text_hint">User Name</string>
    <string name="sign_up_email_edit_text_hint">E-mail</string>
    <string name="sign_up_password_edit_text_hint">Password</string>
    <string name="sign_up_teacher_radio_button">Teacher</string>
    <string name="sign_up_student_radio_button">Student</string>
    <string name="sign_up_sign_up_button">Sign Up</string>
    <string name="sign_up_teacher_or_student">Please select account type&#8230; Teacher or Student?</string>
    <string name="under_appname_intro_signupscreen">Sign Up Here!</string>
    <string name="sign_up_choose_profile_image">Choose your profile image</string>

    <string name="sign_up_type_not_choosed_text_toast">Please, choose your account type</string>

    <string name="fillhere_signuplogin_error">Field Can\'t be empty</string>

    <!-- Main Activity -->
    <string name="studentNo">StudentNo : </string>
    <string name="action_sign_out">Sign Out</string>
    <string name="main_activity_course_created_successfully_toast">Course Created Successfully</string>
    <string name="main_activity_empty_course_name_toast">Write the Course name</string>
    <string name="main_activity_choose_another_course_name_toast">Choose a different course name</string>
    <string name="empty_courses_title">You don\'t have any courses yet</string>
    <string name="empty_courses_subtitle">Add your course from + button</string>
    <string name="course_dialog_title">Enter The Course Name</string>

    <!-- Course Dialog -->
    <string name="course_dialog_name_edit_text_hint">Enter Course Name</string>
    <string name="course_dialog_year_text_view">Select course year</string>
    <string name="course_dialog_save_button">Save</string>
    <string name="course_dialog_cancel_button">Cancel</string>
    <string name="course_delete_dialog_msg">Are you sure you want to delete this course ?</string>
    <string name="course_delete_dialog_delete">Delete</string>
    <string name="course_delete_dialog_cancel">Cancel</string>

    <!-- Course Activity -->
    <string name="course_quizzes">Quizzes</string>
    <string name="course_add_student">Add student</string>
    <string name="course_materials">Materials</string>
    <string name="course_chat">Chat</string>
    <string name="course_private_chat">Private chat</string>

    <string name="action_delete">Delete</string>
    <string name="action_students">Students</string>
    <string name="action_course_details">Course details</string>

    <!-- Course Details Dialog -->
    <string name="course_details_course_name">Course Name: </string>
    <string name="course_details_teacher_name">Teacher Name: </string>
    <string name="course_details_year">Year: </string>
    <string name="course_details_number_of_students">Number of students: </string>

    <!-- AddStudentActivity -->
    <string name="search_studentname">Search by student name or email&#8230;</string>
    <string name="AddStudent_activity_Student_Added_Toast">Selected students added to the course</string>
    <string name="degree_text">Degree : </string>

    <!-- Course Search Activity -->
    <string name="course_search">Enter course name</string>
    <string name="course_search_not_found_toast">No Match found</string>
    <string name="course_search_dialog_confirm_msg">Are you sure you want to enroll this course ?</string>
    <string name="course_search_dialog_enroll_button">Enroll</string>
    <string name="course_search_dialog_cancel_button">Cancel</string>

    <!-- Course Search Adapter -->
    <string name="course_deleted_successfully_toast">Course deleted successfully</string>
    <string name="course_removed_successfully_toast">Course removed successfully</string>
    <string name="course_remove_dialog_msg">Are you sure you want to remove this course ?</string>
    <string name="year">Year </string>

    <!-- Quiz Activity -->
    <string name="quiz_activity_quiz_number">Quiz Number : </string>
    <string name="empty_quizzes_title">This course doesn\'t have any quizzes yet</string>
    <string name="empty_quizzes_subtitle">Add a quiz from + button</string>

    <!-- Quiz Adapter For Teacher -->
    <string name="quiz_delete_dialog_msg">Are you sure you want to delete this quiz</string>
    <string name="quiz_delete_dialog_delete">Delete</string>
    <string name="quiz_delete_dialog_cancel">Cancel</string>
    <string name="quiz_deleted_successfully_toast">Quiz deleted successfully</string>

    <!-- Quiz Adapter For Student -->
    <string name="quiz_degree">Degree : </string>
    <string name="quiz_solved">Solved</string>
    <string name="quiz_not_solved">Not Solved</string>
    <string name="you_already_solved_this_quiz_toast">You already solved this quiz</string>

    <!-- Add Quiz Activity -->
    <string name="add_quiz_question_number_text_view">Question number: </string>
    <string name="add_quiz_question_hint">Enter Question</string>
    <string name="add_quiz_option_1_hint">First Answer</string>
    <string name="add_quiz_option_2_hint">Second Answer</string>
    <string name="add_quiz_option_3_hint">Third Answer</string>
    <string name="add_quiz_option_4_hint">Fourth Answer</string>
    <string name="add_quiz_add_another_question_button">Add another question</string>
    <string name="add_quiz_finish_button">Finish</string>
    <string name="add_quiz_right_answer">Choose the right answer</string>

    <string name="add_quiz_empty_fields_toast">Please, fill all fields</string>

    <!-- Quiz Details Activity -->
    <string name="quiz_details_modify_quiz_button">Modify quiz</string>
    <string name="quiz_details_no_one_solved_this_quiz">No student solved this quiz yet</string>
    <string name="quiz_details_students_who_solve_this_quiz">Students who solved this quiz</string>

    <!-- Quiz Modify Activity -->
    <string name="quiz_modify_next_question_button">Next question</string>
    <string name="quiz_modify_no_more_questions_toast">There is no more questions</string>
    <string name="quiz_modify_no_questions_toast">There is no questions to modify</string>
    <string name="quiz_modify_add_question_button">Add Question</string>
    <string name="quiz_modify_question_deleted_successfully">Question deleted successfully</string>

    <string name="quiz_modify_menu_delete">Delete Question</string>
    <string name="question_delete_dialog_msg">Are you sure you want to delete this question</string>

    <string name="inputMessage">Type a message</string>

    <!-- Quiz Statistics Activity -->
    <string name="ok_button">OK</string>

    <!-- Materials Activity -->
    <string name="materials_empty_view_title">This course doesn\'t have any materials yet</string>
    <string name="materials_empty_view_subtitle">Add any material from + button</string>
    <string name="material_added_toast">Uploading finished</string>

    <string name="material_deleted_successfully_toast">Material deleted duccessfully</string>
    <string name="the_file_is_already_exist">The file is already exist</string>
    <string name="the_file_downloaded_successfully_toast">The file downloaded successfully</string>
    <string name="there_is_no_app_to_read_pdf">There is no app to read pdf files</string>
    <string name="material_delete_dialog_msg">Are you sure you want to delete this material ?</string>
    <string name="material_delete_dialog_delete">Delete</string>
    <string name="material_delete_dialog_cancel">Cancel</string>

    <!-- Chat Activity -->
    <string name="select_user_to_chat_with_text_view">Select user to chat with</string>
    <string name="type_something_to_send_toast">Type something to send</string>
    <string name="message_sent_toast">Message sent</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign up.</string>
    <string name="myCourses">My Courses</string>
    <string name="quizzes">Quizzes</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="this_course_still_has_no_student">This course still has no student</string>
    <string name="select_account_type">Select account type</string>
    <string name="list_of_students_who_slove_quiz">Degrees of students who solved the quiz</string>
    <string name="add_new_course">Add New Course</string>
</resources>
