<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textblack"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/under_appname_intro_loginscreen"
            android:textColor="@color/textblack"
            android:textSize="15sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/login_email_edit_text_hint"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:textColor="@color/textblack"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/login_password_edit_text_hint"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:singleLine="true"
                android:textColor="@color/textblack"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_selector"
            android:text="@string/login_login_button"
            android:textColor="@color/textwhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_selector"
            android:text="@string/login_sign_up_button"
            android:textColor="@color/textwhite"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>