<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".SignUpActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textblack"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/under_appname_intro_signupscreen"
            android:textColor="@color/textblack"
            android:textSize="15sp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:gravity="center_horizontal"
                android:id="@id/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/sign_up_choose_profile_image"
                android:textColor="#990033"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="167dp"
                android:layout_marginLeft="167dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/id_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text" />
        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/sign_up_user_name_edit_text_hint"
                android:inputType="textPersonName"
                android:paddingBottom="16dp"
                android:textColor="@color/textblack"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:errorTextAppearance="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/sign_up_email_edit_text_hint"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp"
                android:textColor="@color/textblack"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/sign_up_password_edit_text_hint"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:singleLine="true"
                android:textColor="@color/textblack"
                android:textSize="12sp"
                app:errorEnabled="true" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:textSize="18sp"
            android:textColor="#990033"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_account_type"
            android:gravity="center_horizontal"
          />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <RadioButton
                android:id="@+id/teacherrb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_teacher_radio_button"
                android:textAlignment="center"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/studentrb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_student_radio_button"
                android:textAlignment="center"
                android:textSize="16sp" />
        </RadioGroup>

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_selector"
            android:text="@string/sign_up_sign_up_button"
            android:textColor="@color/textwhite"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>