<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.course.quiz.QuizDetailsActivity">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/quiz_modify_button"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/quiz_details_modify_quiz_button" />

        <Button
            android:id="@+id/add_question"
            style="@style/MyButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/quiz_modify_add_question_button" />
    </LinearLayout>

    <TextView
        android:visibility="gone"

        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="192dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/quiz_details_no_one_solved_this_quiz"
        android:textColor="#990033"
        android:textSize="20sp"
        android:translationY="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text2" />
    <TextView
        android:visibility="gone"
        android:id="@+id/text2"
        android:textSize="20sp"
        android:textColor="#990033"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/list_of_students_who_slove_quiz"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <!-- Recycler view to show students solved this quiz-->
    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        tools:layout_editor_absoluteX="8dp"></android.support.v7.widget.RecyclerView>

    <ImageView
        android:visibility="gone"

        android:id="@+id/sleepingImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:src="@drawable/sleeping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

</android.support.constraint.ConstraintLayout>